# DjangoTemplate

./: Dockerfile  Makefile  README.md  SUMMARY.md  docker-compose.yml  entrypoint.sh  model_diagram.dot  poetry.md  pyproject.toml  requirements copy.txt  requirements.txt
.trunk/: trunk.yaml
backend/: settings.py  urls.py
backend/accounts/: admin.py  models.py
backend/consume/: admin.py  apps.py  forms.py  gen_consumes.py  models.py  services.py  signals.py  urls.py  views.py
backend/core/: views.py
backend/core/templates/: base.html  base_login.html  index.html
backend/crm/: views.py
backend/dash/: app.py  dash.py  dash_app.py  urls.py  views.py
backend/dash/templatetags/: dashboard_tags.py
backend/formula/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
backend/kitchensink/: admin.py  apps.py  dashboards.py  data.py  urls.py  views.py
backend/prateleira/: admin.py  apps.py  forms.py  gen_consumes.py  models.py  services.py  signals.py  urls.py  views.py
backend/product/: admin.py  api.py  forms.py  models.py  schemas.py  serializers.py  signals.py  urls.py  views.py
backend/reposition/: admin.py  apps.py  forms.py  gen_reposition.py  models.py  services.py  signals.py  urls.py  views.py
backend/segment/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
backend/vehicle/: admin.py  apps.py  dashboards.py  data.py  tables.py  urls.py
cli-git/: create_issue.py
django-template/: pyproject.toml
docs/: chave_bd.md  dash.md
src/pages/tailwind/: index.html
(+34 files in other folders)
